--- a/WebApp/static/css/768.less
+++ b/WebApp/static/css/768.less
@@ -25,48 +25,13 @@
 .lhide {
 	display: none;
 }
-.modules_right {
-	margin-top: 6em;
-}
-#mainmenu {
-	width: auto;
 
-	> ul {
-		display: block!important;
-		clear: none;
-
+.subheader {
+	background: @offwhite;
+	ul {
 		li {
-			display: inline-block;
-			margin-left: 2em;
-
-			border-top: 0px solid @lightgrey;
-			padding: 0;
-
-			a {
-				text-transform: uppercase;
-			}
-
-			ul {
-				position: absolute;
-				display: none;
-				background: @white;
-				border: 1px solid @lightgrey;
-
-				li {
-					display: block;
-				}
-			}
+			display: inline;
+			width: 50%;
 		}
-	}
-}
-a#pull {
-	display: none;
-}
-.quote {
-	p {
-		padding: 0.4em 13%;
-		font-weight: 300;
-		font-size: 2.5em;
-		line-height: 1.4em;
 	}
 }
