--- a/WebApp/static/css/style.less
+++ b/WebApp/static/css/style.less
@@ -3,21 +3,22 @@
 *, pre {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.6em;
-  font-size: 13px;
+  font-size: 14px;
   font-smoothing: always;
   -webkit-font-smoothing: antialiased;
 }
 body {
-  color: @base;  
-  background: @white;
+  color: @offwhite;  
+  background: @darkgrey;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   height: 100%;
+  margin: 0;
 }
 h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
-  color: @base;
+  color: @orange;
   line-height: 1.1em;
   font-weight: 300;
 
@@ -30,45 +31,46 @@ h1, h2, h3, h4 {
 }
 h1 {
 	font-weight: 300;
-	color: @offbase;
 	font-size: 2.8em;
 	margin: 0.5em 0 0.75em 0;
 }
-.homepage {
-	h1 {
-		font-size: 3em;
-		color: @white;
-		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
-		strong {
-			display: inline-block;
-			text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
-		}
-	}
-}
 h2 {
-	color: @darkgrey;
+	color: @orange;
 	font-size: 1.5em;
 	padding: 0.4em 0 0.5em 0;
 }
 h3 {
-	font-size: 1.3em;
+	font-size: 1.2em;
 	padding: 0.4em 0 0.5em 0;
 }
-ul, ol {
-	margin: 0 0 1em 0;
-	padding: 0 0 0 1.5em;
+
+ul {
+	list-style: none; 
+	padding: 0;
 
 	li {
-		margin: 0 0 0.5em 0;
+		display: inline;
+		margin-right: 1em;
 	}
 }
+
+figure {
+	padding: 1em 0;
+	margin: 0;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 p {
 	margin: 0 0 1em 0;
 }
 a {
 	text-decoration: none;
-	color: @base;
+	color: @orange;
 }
 input, select, textarea, button {
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -81,6 +83,7 @@ section {
 
 	&.active {
 		display: block;
+		width: 100%;
 	}
 }
 
@@ -93,14 +96,17 @@ section {
 .clearer {
 	clear: both;
 }
+
 /* column definitions
 .column.s**		resolutions up to 319px
 .column.m**		resolutions 320px to 511px
 .column.l**		resolutions 512px to 1023px
 .column.xl**	resolutions 1024px and up
  */
+
 .padding {
 	padding: 1.5em 2%;
+
 }
 .column {
 	float: left;
@@ -108,6 +114,8 @@ section {
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
 	padding: 1.5em 2%;
+	display: block;
+	vertical-align: top;
 
 	&.no-padding {
 		padding: 0;
@@ -140,71 +148,104 @@ section {
 .mhide, .lhide, .xlhide {
 
 }
-.body {
-	padding-top: 5em;
-}
-#header {
-	position: fixed;
+
+.header {
 	width: 100%;
-	z-index: 41;
-	background: rgba(255,255,255,1);
-	border-bottom: 1px solid @lightgrey;
-	height: 4.4em;
+	background: @orange;
+	display: block;
+	color: @base;
 
-	.logo {
-		position: absolute;
-		left: 2%;
-		top: 0.5em;
-		z-index: 99;
+	h1 {
+		color: @offwhite;
 	}
 
-	ul.mainmenu {
-		float: right;
-		list-style: none;
-		margin-top: 1.3em;
+	a {
+		color: @offwhite;
+		margin-top: 2em;
 
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	#main {
+		padding-top: 1.5em;
+		padding-left: 2em;
+	}
+}
+
+.subheader {
+	background: @offwhite;
+	ul {
 		li {
-			&:first-child {
-				margin-left: 0;
-			}
-
-			display: inline-block;
-			margin-left: 1em;
+			display: block;
+			width: 25%;
+			padding: 0.5em 0;
 		}
 	}
 }
 
-header {
-	nav {
-		width: 100%;
-		float: left;
-
-		ul {
-
-			li {
-				display: inline;
-			}
-		}
-	}
+#content {
+	background: @base;
 }
 
-.stappen {
-	background: @darkgrey;
+.imageheader {
+	max-height: 150px;
+	max-width: 100% auto;
 	text-align: center;
-	padding: 1em 0;
+	background-repeat: repeat-x;
+}
 
-	h2 {
-		color: @offwhite;
-		font-size: 1.4em;
-		font-weight: 600;
+
+.releasedate {
+	display: block;
+	width: 100%;
+	padding: 0 0 1em 0;
+}
+
+.actorspage {
+
+	img {
+		display: none;
 	}
+}
 
-	p {
-		font-weight: 300;
-		color: @offwhite;
-		margin: 0;
-		line-height: 1.3em;
-		padding: 0.5em 5%;
-		font-size: 1.2em;
+footer {
+	width: 100%;
+}
+
+
+.pace .pace-progress {
+  background: @offwhite;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  height: 10px;
+
+  -webkit-transition: width 1s;
+  -moz-transition: width 1s;
+  -o-transition: width 1s;
+  transition: width 1s;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+.blokje {
+	background: @offwhite;
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 40px;
+	top: 40px;
+	cursor: pointer;
+}
+
+#main {
+
+	&.active {
+		display: block;
 	}
 }
