--- a/WebApp/static/css/style.css
+++ b/WebApp/static/css/style.css
@@ -125,7 +125,7 @@ section.active {
   vertical-align: top;
 }
 .column.no-padding {
-  padding: 0;
+  padding: 0 2%;
 }
 .s25 {
   width: 25%;
@@ -177,24 +177,44 @@ section.active {
 .subheader ul li {
   display: block;
   width: 25%;
-  padding: 0.5em 0;
+  padding: 0;
 }
 #content {
   background: #252525;
 }
-.imageheader {
-  max-height: 150px;
-  max-width: 100% auto;
-  text-align: center;
-  background-repeat: repeat-x;
-}
-.releasedate {
+.releasedate  .reviewScore {
   display: block;
   width: 100%;
   padding: 0 0 1em 0;
 }
-.actorspage img {
-  display: none;
+.actorspage .actorlist a {
+  vertical-align: top;
+}
+.actorspage .actorlist .actor {
+  border-bottom: solid 1px #f2f2f2;
+}
+.actorspage .actorlist .actorPicture {
+  display: block;
+  float: left;
+  width: 50%;
+}
+.actorspage .actorlist .actorPicture img {
+  max-width: 100%;
+  height: auto;
+}
+.actorspage .actorlist .charactername {
+  width: 70%;
+}
+.actorspage .actorlist h3 {
+  width: 30%;
+  display: block;
+  float: right;
+  vertical-align: top;
+}
+.reviewList span {
+  width: 100%;
+  display: block;
+  margin-right: 1em;
 }
 footer {
   width: 100%;
@@ -214,14 +234,27 @@ footer {
 .pace-inactive {
   display: none;
 }
-.blokje {
-  background: #f2f2f2;
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  right: 40px;
-  top: 40px;
+.color {
+  color: #f36d21;
+}
+#blokje {
+  width: 35px;
+  height: 35px;
+  background: url('../link/menu.svg') no-repeat 6px;
+  position: relative;
+  text-align: right;
+  right: -100px;
+  top: 32px;
   cursor: pointer;
+  display: block!important;
+}
+.background {
+  background: #2D2D2D;
+  margin-right: 3px;
+  margin-bottom: 3px;
+}
+#main {
+  display: none;
 }
 #main.active {
   display: block;
