--- a/WebApp/static/css/768.less
+++ b/WebApp/static/css/768.less
@@ -5,10 +5,10 @@
 	width: 25%;
 }
 .l33 {
-	width: 33.33%;
+	width: 33%;
 }
 .l50 {
-	width: 50%;
+	width: 48%;
 }
 .l66 {
 	width: 66.66%;
@@ -34,4 +34,12 @@
 			width: 50%;
 		}
 	}
+}
+
+#main {
+	display: block!important;
+}
+
+#blokje {
+	display: none!important;
 }
